# element-desktop-leveldb

./: .gitignore  Cargo.toml  README.md  SENSITIVE_DATA.md  copy-leveldb.sh  default.nix  flake.nix  shell.nix
src/: main.rs
