[package]
name = "element-desktop-leveldb"
version = "0.1.0"
edition = "2024"
license = "MIT"
homepage = "#website#"
repository = "https://github.com/bahrom04-lab/element-desktop-leveldb"
description = "Letʻs see whatʻs inside leveldb"
authors = ["bahrom04"]

[dependencies]
rusty-leveldb = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
regex = "1"
sha2 = "0.10"
anyhow = "1"
chrono = "0.4"
thiserror = "2.0.18"

# Development dependencies which aren't used in release binary
[dev-dependencies]

# Optimize release binary as much as possible
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
